<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="tableReserveDinnerVM" type="com.blanksapplication.app.modules.tablereservedinner.data.viewmodel.TableReserveDinnerVM"/>
    </data>
    <LinearLayout android:id="@+id/linearColumnarrowleft"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/_24pxv"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylewhite_A700">
        <androidx.appcompat.widget.Toolbar android:gravity="start"
            android:id="@+id/toolbarToolbar"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_14pxh"
            android:layout_marginStart="@dimen/_14pxh"
            android:layout_width="match_parent" app:contentInsetStart="0dp">
            <LinearLayout android:gravity="start"
                android:id="@+id/linearRowarrowleft"
                android:layout_height="wrap_content"
                android:layout_width="match_parent" android:orientation="horizontal">
                <ImageView android:id="@+id/imageArrowleft"
                    android:layout_height="@dimen/_48pxh"
                    android:layout_marginBottom="@dimen/_10pxv"
                    android:layout_marginTop="@dimen/_11pxv"
                    android:layout_width="@dimen/_25pxh"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_arrowleft"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_arrowleft"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtTableReserve"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_33pxh"
                    android:layout_weight="0.92"
                    android:layout_width="0dp" android:singleLine="true"
                    android:text="@{tableReserveDinnerVM.tableReserveDinnerModel.txtTableReserve}"
                    style="@style/txtIstokWebbold48" tools:text="@string/lbl_table_reserve"/>
            </LinearLayout>
        </androidx.appcompat.widget.Toolbar>
        <ScrollView android:clipToPadding="false"
            android:fillViewport="true" android:gravity="start"
            android:id="@+id/scrollViewScrollview"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/_19pxv"
            android:layout_weight="1" android:layout_width="match_parent">
            <LinearLayout android:id="@+id/linearColumn2Seat"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_20pxv"
                android:layout_width="match_parent" android:orientation="vertical">
                <LinearLayout android:gravity="end"
                    android:id="@+id/linearRow2Seat"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_57pxh"
                    android:layout_marginStart="@dimen/_57pxh"
                    android:layout_width="wrap_content" android:orientation="horizontal">
                    <androidx.appcompat.widget.AppCompatButton
                        android:ellipsize="end" android:gravity="center"
                        android:id="@+id/btnSeatSmall"
                        android:layout_height="@dimen/_59pxv"
                        android:layout_marginBottom="@dimen/_8pxv"
                        android:layout_marginTop="@dimen/_2pxv"
                        android:layout_width="@dimen/_78pxh"
                        android:paddingBottom="@dimen/_15pxv"
                        android:paddingEnd="@dimen/_7pxh"
                        android:paddingStart="@dimen/_9pxh"
                        android:paddingTop="@dimen/_15pxv"
                        android:singleLine="true"
                        android:text="@string/lbl_2_seat"
                        android:textAllCaps="false"
                        style="@style/btnSolid" tools:text="@string/lbl_2_seat"/>
                    <TextView android:ellipsize="end"
                        android:id="@+id/txtLeftCounter"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_83pxh"
                        android:layout_weight="0.52"
                        android:layout_width="0dp"
                        android:singleLine="true"
                        android:text="@{tableReserveDinnerVM.tableReserveDinnerModel.txtLeftCounter}"
                        style="@style/txtIstokWebbold48_1" tools:text="@string/lbl_4_left"/>
                </LinearLayout>
                <LinearLayout android:gravity="end"
                    android:id="@+id/linearRow6Seat"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_57pxh"
                    android:layout_marginStart="@dimen/_57pxh"
                    android:layout_marginTop="@dimen/_26pxv"
                    android:layout_width="match_parent" android:orientation="horizontal">
                    <androidx.appcompat.widget.AppCompatButton
                        android:ellipsize="end" android:gravity="center"
                        android:id="@+id/btnSeatMiddle"
                        android:layout_height="@dimen/_59pxv"
                        android:layout_marginBottom="@dimen/_7pxv"
                        android:layout_marginTop="@dimen/_3pxv"
                        android:layout_width="@dimen/_120pxh"
                        android:paddingBottom="@dimen/_15pxv"
                        android:paddingEnd="@dimen/_29pxh"
                        android:paddingStart="@dimen/_29pxh"
                        android:paddingTop="@dimen/_15pxv"
                        android:singleLine="true"
                        android:text="@string/lbl_6_seat"
                        android:textAllCaps="false"
                        style="@style/btnSolid" tools:text="@string/lbl_6_seat"/>
                    <TextView android:ellipsize="end"
                        android:id="@+id/txtLeftCounterOne"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_61pxh"
                        android:layout_weight="0.41"
                        android:layout_width="0dp"
                        android:singleLine="true"
                        android:text="@{tableReserveDinnerVM.tableReserveDinnerModel.txtLeftCounterOne}"
                        style="@style/txtIstokWebbold48_1" tools:text="@string/lbl_3_left"/>
                </LinearLayout>
                <LinearLayout android:gravity="end"
                    android:id="@+id/linearRow10Seat"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_55pxh"
                    android:layout_marginStart="@dimen/_55pxh"
                    android:layout_marginTop="@dimen/_24pxv"
                    android:layout_width="match_parent" android:orientation="horizontal">
                    <androidx.appcompat.widget.AppCompatButton
                        android:ellipsize="end" android:gravity="center"
                        android:id="@+id/btnSeatBig"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_3pxv"
                        android:layout_marginTop="@dimen/_7pxv"
                        android:layout_weight="0.68"
                        android:layout_width="0dp"
                        android:paddingBottom="@dimen/_15pxv"
                        android:paddingEnd="@dimen/_30pxh"
                        android:paddingStart="@dimen/_30pxh"
                        android:paddingTop="@dimen/_15pxv"
                        android:singleLine="true"
                        android:text="@string/lbl_10_seat"
                        android:textAllCaps="false"
                        style="@style/btnSolid" tools:text="@string/lbl_10_seat"/>
                    <TextView android:ellipsize="end"
                        android:id="@+id/txtLeftCounterTwo"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_28pxh"
                        android:layout_weight="0.32"
                        android:layout_width="0dp"
                        android:singleLine="true"
                        android:text="@{tableReserveDinnerVM.tableReserveDinnerModel.txtLeftCounterTwo}"
                        style="@style/txtIstokWebbold48_1" tools:text="@string/lbl_2_left"/>
                </LinearLayout>
                <TextView android:ellipsize="end"
                    android:gravity="start"
                    android:id="@+id/txtTableSize"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_36pxv"
                    android:layout_width="match_parent"
                    android:paddingBottom="@dimen/_6pxv"
                    android:paddingStart="@dimen/_30pxh"
                    android:paddingTop="@dimen/_11pxv"
                    android:singleLine="true"
                    android:text="@{tableReserveDinnerVM.tableReserveDinnerModel.txtTableSize}"
                    style="@style/txtSolid" tools:text="@string/lbl_table_size"/>
                <LinearLayout android:gravity="start"
                    android:id="@+id/linearRowsize"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_27pxh"
                    android:layout_marginStart="@dimen/_27pxh"
                    android:layout_marginTop="@dimen/_13pxv"
                    android:layout_width="wrap_content" android:orientation="horizontal">
                    <TextView android:ellipsize="end"
                        android:id="@+id/txtSize"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_5pxv"
                        android:layout_marginTop="@dimen/_1pxv"
                        android:layout_weight="0.28"
                        android:layout_width="0dp"
                        android:singleLine="true"
                        android:text="@{tableReserveDinnerVM.tableReserveDinnerModel.txtSize}"
                        style="@style/txtIstokWebbold20_1" tools:text="@string/lbl_size"/>
                    <View android:background="@color/bluegray_100"
                        android:id="@+id/viewRectangleTwentyTwo"
                        android:layout_height="@dimen/_36pxv"
                        android:layout_marginStart="@dimen/_19pxh" android:layout_width="@dimen/_46pxh"/>
                    <TextView android:ellipsize="end"
                        android:id="@+id/txtPeoples"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_3pxv"
                        android:layout_marginStart="@dimen/_17pxh"
                        android:layout_marginTop="@dimen/_3pxv"
                        android:layout_weight="0.45"
                        android:layout_width="0dp"
                        android:singleLine="true"
                        android:text="@{tableReserveDinnerVM.tableReserveDinnerModel.txtPeoples}"
                        style="@style/txtIstokWebbold20_1" tools:text="@string/lbl_peoples"/>
                </LinearLayout>
                <TextView android:ellipsize="end"
                    android:gravity="start"
                    android:id="@+id/txtTableSizeOne"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_13pxv"
                    android:layout_width="match_parent"
                    android:paddingBottom="@dimen/_6pxv"
                    android:paddingStart="@dimen/_30pxh"
                    android:paddingTop="@dimen/_11pxv"
                    android:singleLine="true"
                    android:text="@{tableReserveDinnerVM.tableReserveDinnerModel.txtTableSizeOne}"
                    style="@style/txtSolid" tools:text="@string/lbl_date"/>
                <LinearLayout android:gravity="start"
                    android:id="@+id/linearRowdate"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_30pxh"
                    android:layout_marginStart="@dimen/_30pxh"
                    android:layout_marginTop="@dimen/_12pxv"
                    android:layout_width="match_parent" android:orientation="horizontal">
                    <TextView android:ellipsize="end"
                        android:id="@+id/txtDate"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_12pxv"
                        android:layout_marginTop="@dimen/_8pxv"
                        android:layout_weight="0.18"
                        android:layout_width="0dp"
                        android:singleLine="true"
                        android:text="@{tableReserveDinnerVM.tableReserveDinnerModel.txtDate}"
                        style="@style/txtIstokWebbold20_1" tools:text="@string/lbl_date2"/>
                    <FrameLayout android:id="@+id/frameDate"
                        android:layout_height="@dimen/_50pxv"
                        android:layout_marginStart="@dimen/_17pxh"
                        android:layout_width="@dimen/_234pxh" style="@style/groupStylebluegray_100">
                        <ImageView android:id="@+id/imageCalendar"
                            android:layout_gravity="top|start"
                            android:layout_height="@dimen/_35pxh"
                            android:layout_marginBottom="@dimen/_10pxv"
                            android:layout_marginEnd="@dimen/_10pxh"
                            android:layout_marginStart="@dimen/_4pxh"
                            android:layout_marginTop="@dimen/_4pxv"
                            android:layout_width="@dimen/_30pxh"
                            android:scaleType="fitXY"
                            android:src="@drawable/img_calendar"
                            tools:ignore="ContentDescription" tools:src="@drawable/img_calendar"/>
                    </FrameLayout>
                </LinearLayout>
                <TextView android:ellipsize="end"
                    android:gravity="start"
                    android:id="@+id/txtTableSizeTwo"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_12pxv"
                    android:layout_width="match_parent"
                    android:paddingBottom="@dimen/_4pxv"
                    android:paddingStart="@dimen/_30pxh"
                    android:paddingTop="@dimen/_13pxv"
                    android:singleLine="true"
                    android:text="@{tableReserveDinnerVM.tableReserveDinnerModel.txtTableSizeTwo}"
                    style="@style/txtSolid" tools:text="@string/msg_time_select_on"/>
                <LinearLayout android:gravity="start"
                    android:id="@+id/linearRowtimeframe"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_13pxh"
                    android:layout_marginStart="@dimen/_18pxh"
                    android:layout_marginTop="@dimen/_16pxv"
                    android:layout_width="match_parent" android:orientation="horizontal">
                    <TextView android:ellipsize="end"
                        android:id="@+id/txtTimeFrame"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_1pxv"
                        android:layout_weight="0.33"
                        android:layout_width="0dp"
                        android:paddingBottom="@dimen/_8pxv"
                        android:paddingEnd="@dimen/_17pxh"
                        android:paddingStart="@dimen/_13pxh"
                        android:paddingTop="@dimen/_4pxv"
                        android:singleLine="true"
                        android:text="@{tableReserveDinnerVM.tableReserveDinnerModel.txtTimeFrame}"
                        style="@style/txtSolidRounded_2" tools:text="@string/lbl_1800_1900"/>
                    <TextView android:ellipsize="end"
                        android:id="@+id/txtTimeFrameOne"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_12pxh"
                        android:layout_marginTop="@dimen/_1pxv"
                        android:layout_weight="0.33"
                        android:layout_width="0dp"
                        android:paddingBottom="@dimen/_8pxv"
                        android:paddingEnd="@dimen/_14pxh"
                        android:paddingStart="@dimen/_13pxh"
                        android:paddingTop="@dimen/_4pxv"
                        android:singleLine="true"
                        android:text="@{tableReserveDinnerVM.tableReserveDinnerModel.txtTimeFrameOne}"
                        style="@style/txtSolidRounded_2" tools:text="@string/lbl_1900_2000"/>
                    <TextView android:ellipsize="end"
                        android:id="@+id/txtTimeFrameTwo"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_12pxh"
                        android:layout_marginTop="@dimen/_1pxv"
                        android:layout_weight="0.33"
                        android:layout_width="0dp"
                        android:paddingBottom="@dimen/_8pxv"
                        android:paddingEnd="@dimen/_14pxh"
                        android:paddingStart="@dimen/_13pxh"
                        android:paddingTop="@dimen/_4pxv"
                        android:singleLine="true"
                        android:text="@{tableReserveDinnerVM.tableReserveDinnerModel.txtTimeFrameTwo}"
                        style="@style/txtSolidRounded_2" tools:text="@string/lbl_2000_2100"/>
                </LinearLayout>
                <androidx.appcompat.widget.AppCompatButton
                    android:ellipsize="end" android:gravity="center"
                    android:id="@+id/btnConfirm"
                    android:layout_gravity="center_horizontal"
                    android:layout_height="@dimen/_58pxv"
                    android:layout_marginEnd="@dimen/_18pxh"
                    android:layout_marginStart="@dimen/_18pxh"
                    android:layout_marginTop="@dimen/_95pxv"
                    android:layout_width="@dimen/_252pxh"
                    android:paddingBottom="@dimen/_5pxv"
                    android:paddingEnd="@dimen/_30pxh"
                    android:paddingStart="@dimen/_30pxh"
                    android:paddingTop="@dimen/_5pxv"
                    android:singleLine="true"
                    android:text="@string/lbl_confirm"
                    android:textAllCaps="false"
                    style="@style/btnSolidRounded_7" tools:text="@string/lbl_confirm"/>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</layout>
